Enable movie creation via POST request in list_movies route and update show_movies.html form

--- a/templates/show_movies.html
+++ b/templates/show_movies.html
@@ -19,7 +19,7 @@
         <p>No movies found for this user.</p>
     {% endif %}
     <h2>➕ Add New Movie</h2>
-    <form action="/users/<int:user_id>/movies" method="POST" class="add-user-form">
+    <form action="{{ url_for('list_movies', user_id=user.id) }}" method="POST" class="add-user-form">
         <input type="text" name="name" placeholder="Enter name..." required>
         <button type="submit">Add Movie 🚀</button>
     </form>
