--- a/templates/show_movies.html
+++ b/templates/show_movies.html
@@ -12,6 +12,10 @@
                 <strong>{{ movie.name }}</strong> ({{ movie.year }}) – directed by {{ movie.director }}
                 <br>
                 <img src="{{ movie.poster_url }}" width="100">
+
+               <form action="{{ url_for('delete_movie', user_id=user.id, movie_id=movie.id) }}" method="POST" style="display:inline;">
+    <button type="submit">🗑️ Delete</button>
+    </form>
             </li>
         {% endfor %}
         </ul>
