--- a/templates/show_movies.html
+++ b/templates/show_movies.html
@@ -8,10 +8,16 @@
     {% if movies %}
         <ul>
         {% for movie in movies %}
-            <li>
-                <strong>{{ movie.name }}</strong> ({{ movie.year }}) – directed by {{ movie.director }}
-                <br>
-                <img src="{{ movie.poster_url }}" width="100">
+           <li>
+        <strong>{{ movie.name }}</strong> ({{ movie.year }}) – directed by {{ movie.director }}
+        <br>
+        <img src="{{ movie.poster_url }}" width="100">
+
+
+        <form action="{{ url_for('update_movie', movie_id=movie.id, user_id=user.id) }}" method="POST" style="margin-top: 10px;">
+            <input type="text" name="new_name" placeholder="New title..." required>
+            <button type="submit">Update Title ✏️</button>
+        </form>
 
                <form action="{{ url_for('delete_movie', user_id=user.id, movie_id=movie.id) }}" method="POST" style="display:inline;">
     <button type="submit">🗑️ Delete</button>
