Update text in show_movies.html for improved clarity and consistency

--- a/templates/show_movies.html
+++ b/templates/show_movies.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-    <h1>🎞️ Movies for User ID {{ user_id }}</h1>
+    <h1>🎞️{{ user.name }}´s favorite Movies</h1>
 
 
     {% if movies %}
